--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ dj-database-url==2.3.0
 Django==5.1.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
+packaging==24.2
 psycopg2==2.9.10
 PyJWT==2.10.0
 rest-framework-simplejwt==0.0.2
