--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==23.0.0
 packaging==24.2
 psycopg2==2.9.10
 PyJWT==2.10.0
+python-decouple==3.8
 rest-framework-simplejwt==0.0.2
 sqlparse==0.5.2
 typing_extensions==4.12.2
